[gd_scene load_steps=4 format=3 uid="uid://7vkayglwow26"]

[ext_resource type="Script" path="res://Scenes/Options/options.gd" id="1_8r7bk"]
[ext_resource type="Theme" uid="uid://bplqepcs14bpk" path="res://Menus/Themes/main_theme.tres" id="1_pvcxt"]
[ext_resource type="Texture2D" uid="uid://be173gi3mvd40" path="res://Textures/Overlay/background.jpg" id="3_u3gh6"]

[node name="Options" type="Node" node_paths=PackedStringArray("quit_button", "volume_slider", "sfx_slider")]
process_mode = 3
script = ExtResource("1_8r7bk")
quit_button = NodePath("CanvasLayer/Options/VBoxContainer/Quit")
volume_slider = NodePath("CanvasLayer/Options/VBoxContainer/VBoxContainer2/HBoxContainer2/Volume")
sfx_slider = NodePath("CanvasLayer/Options/VBoxContainer/VBoxContainer2/HBoxContainer/SFXVolume")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Options" type="Control" parent="CanvasLayer"]
z_index = 20
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pvcxt")

[node name="ColorRect" type="TextureRect" parent="CanvasLayer/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_u3gh6")
stretch_mode = 1

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.217
anchor_right = 0.5
anchor_bottom = 0.217
offset_left = -119.0
offset_top = -24.59
offset_right = 119.0
offset_bottom = 24.41
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[color=black][font_size=48][center]Options[/center][/font_size][/color]"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.619
anchor_right = 0.5
anchor_bottom = 0.619
offset_left = -102.0
offset_top = -76.13
offset_right = 102.0
offset_bottom = 75.87
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Options/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="VolumeFX" type="Label" parent="CanvasLayer/Options/VBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "Volume"
horizontal_alignment = 1

[node name="Volume" type="HSlider" parent="CanvasLayer/Options/VBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Options/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="VolumeFX" type="Label" parent="CanvasLayer/Options/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "FX Volume"
horizontal_alignment = 1

[node name="SFXVolume" type="HSlider" parent="CanvasLayer/Options/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="Back" type="Button" parent="CanvasLayer/Options/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Return
"

[node name="Quit" type="Button" parent="CanvasLayer/Options/VBoxContainer"]
visible = false
layout_mode = 2
text = "Quit"

[connection signal="value_changed" from="CanvasLayer/Options/VBoxContainer/VBoxContainer2/HBoxContainer2/Volume" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Options/VBoxContainer/VBoxContainer2/HBoxContainer/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="pressed" from="CanvasLayer/Options/VBoxContainer/VBoxContainer2/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Options/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
